--- a/index.html
+++ b/index.html
@@ -82,15 +82,8 @@
   .nav-logo-icon {
     width: 36px;
     height: 36px;
-    background: var(--accent-green);
     border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: 900;
-    font-size: 1.1rem;
-    color: var(--bg-primary);
-    letter-spacing: -0.5px;
+    object-fit: contain;
   }
 
   .nav-logo-text {
@@ -983,7 +976,7 @@
 <!-- NAV -->
 <nav>
   <a href="#" class="nav-logo">
-    <div class="nav-logo-icon">G</div>
+    <img src="logo.png" alt="GymTime Logo" class="nav-logo-icon">
     <span class="nav-logo-text">GymTime</span>
   </a>
   <ul class="nav-links">
