--- a/index.html
+++ b/index.html
@@ -1199,8 +1199,8 @@
       <span>© 2026 GymTime by Yp!</span>
     </div>
     <ul class="footer-links">
-      <li><a href="https://developeryp.github.io/GymTime/Datenschutzerklaerung.html" target="_blank">Datenschutzerklärung</a></li>
-      <li><a href="https://developeryp.github.io/GymTime/Nutzungsbedingungen.html" target="_blank">Nutzungsbedingungen</a></li>
+      <li><a href="https://developeryp.github.io/GymTime/Datenschutzerklaerung.html" target="_blank">Datenschutzerklärung der App</a></li>
+      <li><a href="https://developeryp.github.io/GymTime/Nutzungsbedingungen.html" target="_blank">Nutzungsbedingungen der App</a></li>
       <li><a href="mailto:developeryp1@gmail.com">Kontakt</a></li>
     </ul>
   </div>
