--- a/Datenschutzerklaerung.html
+++ b/Datenschutzerklaerung.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Datenschutzerkl&auml;rung / Privacy Policy &ndash; GymTime: Live Auslastung</title>
+  <title>Datenschutzerkl&auml;rung / Privacy Policy &ndash; GymRadar: Live Auslastung</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
   <style>
