Update app name from GymTime to GymRadar

--- a/Nutzungsbedingungen.html
+++ b/Nutzungsbedingungen.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow">
-  <title>Nutzungsbedingungen / Terms of Use – GymTime: Live Auslastung</title>
+  <title>Nutzungsbedingungen / Terms of Use – GymRadar: Live Auslastung</title>
   <style>
     body {
       font-family: sans-serif;
@@ -40,10 +40,10 @@
   </p>
 
   <p>
-    Die App &bdquo;GymTime: Live Auslastung&ldquo; zeigt die aktuelle Auslastung von Fitnessstudios in Echtzeit an
+    Die App &bdquo;GymRadar: Live Auslastung&ldquo; zeigt die aktuelle Auslastung von Fitnessstudios in Echtzeit an
     und erstellt auf Basis gesammelter Daten Prognosen f&uuml;r zuk&uuml;nftige Auslastungen. Die Nutzung der App
     ist kostenfrei und erfordert eine Internetverbindung zum Abrufen der Auslastungsdaten.<br>
-    The app &ldquo;GymTime: Live Auslastung&rdquo; displays the current occupancy of fitness studios in real time
+    The app &ldquo;GymRadar: Live Auslastung&rdquo; displays the current occupancy of fitness studios in real time
     and generates forecasts based on collected data. The app is free to use and requires an internet
     connection to retrieve occupancy data.
   </p>
